# testing_mocked_sensor_and_mqtt

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/app_net/: CMakeLists.txt  app_net.c
components/app_net/include/: app_net.h
components/fake_sensor_bus/: CMakeLists.txt  fake_sensor_bus.c
components/fake_sensor_bus/include/: fake_sensor_bus.h
components/mpu9250/: CMakeLists.txt  mpu9250.c
components/mpu9250/include/: mpu9250.h
components/sensor_bus/include/: sensor_bus.h
main/: CMakeLists.txt  Kconfig.projbuild  i2c_basic_example_main.c
test_apps/sensor_unit/: CMakeLists.txt  sdkconfig.defaults
test_apps/sensor_unit/main/: CMakeLists.txt  test_mpu9250.c
tools/node_red/: docker-compose.yml  flows.json  generate_tls_certs.sh  mosquitto.conf
